added some fiches

--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,7 @@ body, html {
     font-family: sans-serif;
 }
 
-h1{text-align: center;}
+h1, h2{text-align: center;}
 
 .content {
     margin: 0 auto;
