--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename = 'style.css') }}">
+    <script src="{{ url_for('static', filename = 'script.js') }}"></script>
     <title>{% block head %}{% endblock %}</title>
 </head>
 <body>
-    {% block body %}{% endblock %}
+    {% block body %}
+    {% endblock %}
 </body>
 </html>
