--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,9 @@
         {% endfor %}
     </table>
     {% endif %}
-    <form action = "/" method="POST">
+    <form id="contentform">
         <input type="text" name="content" id="content">
-        <input type="submit" value = "Add your Task">
+        <input type="submit" value = "Add your Task" id = "button">
     </form>
 </div>
 {% endblock %}
