--- a/templates/update.html
+++ b/templates/update.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update</title>
-</head>
-<body>
+{% extends 'base.html'%}
+
+{% block head %}Update{% endblock %}
+
+{% block body %}
+    <div class="content">
     <h1>Update</h1>
     <form action = "/update/{{task.id}}" method="POST">
         <input type="text" name="content" id="content", value = "{{task.content}}">
-        <input type="submit" value = "Update Taks">
+        <input type="submit" value = "Update Taks" id = "button">
     </form>
-</body>
-</html>
+    </div>
+{% endblock %}
