--- a/static/style.css
+++ b/static/style.css
@@ -10,28 +10,47 @@ h1, h2{text-align: center;}
     width: 400px;
 }
 
-table, td, th {
-    border: 1px solid rgb(17, 0, 255);
-}
-
-table {
-    border-collapse: collapse;
-    width: 100%;
-}
-
-th {
-    height: 30px;
-}
-
-td {
-    text-align: center;
-    padding: 5px;
-}
-
 .form {
     margin-top: 20px;
 }
 
 #content {
     width: 70%;
+}
+
+.container{
+    padding-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+  .portfolio-items-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+  .portfolio-item-wrapper {
+    position: relative;
+}
+
+  .portfolio-img-background {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 350px;
+    width: 100%;
+}
+
+  .img-text-wrapper {
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
+    padding-left: 100px;
+    padding-right: 100px;
+    font-weight: 600;
 }
